# gpt_worker

./: README.en.md  README.ja.md  README.md  agents.py  cli.py  connector.py  constants.py  dataholder.py  main.py  planner.py  playground.ipynb  pyproject.toml  setup.py  tools.py  workspace_plan.json  workspace_summary.txt
gpt_worker/: agents.py  cli.py  connector.py  constants.py  main.py  tools.py
logs/: 250113-1.txt  250113-2.txt  250113-3.txt  250113.txt  250116-1.txt
test/: creative_writer.py
tests/: planner.py  scriptexecutor.py  test_agents.py  test_agents_integration.py  test_tools.py  tools.py  worker.py
