[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-worker"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "GPT Worker - AIによるタスク自動化ツール"
requires-python = ">=3.8"
dependencies = [
    "click",
    "openai",
]

[project.scripts]
gptw = "gpt_worker.cli:cli"
